# sb-ia-32

./: .gitignore  CMakeLists.txt  EscreverChar.asm  EscreverString.asm  LICENSE  LeerChar.asm  LeerInteiro.asm  LeerString.asm  README.md  assembleAndLink.sh  compileProject.sh  hello.asm  toLower.asm
ia-32-examples/: hello.asm  toLower.asm
test-files/: bin.s  charToLower.asm  echo.asm  fat_mod_A.asm  fifi.asm  triangulo.asm  triangulo.s
tradutor/include/: preprocessor.hpp  translator.hpp  utils.hpp
tradutor/src/: main.cpp  preprocessor.cpp  translator.cpp  utils.cpp
